auth/manifests/keycloak-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: nautible
    app.kubernetes.io/managed-by: manual
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: keycloak
      app.kubernetes.io/component: auth
  template:
    metadata:
      labels:
        app.kubernetes.io/name: keycloak
        app.kubernetes.io/instance: keycloak
        app.kubernetes.io/version: 1.0.0
        app.kubernetes.io/component: auth
        app.kubernetes.io/part-of: nautible
        app.kubernetes.io/managed-by: manual
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:18.0.0
        args: ["start","--import-realm","--hostname-strict=false","--auto-build","--db=postgres","--http-relative-path /auth","--proxy edge"]
        # args: ["start-dev","--import-realm","--hostname-strict=false","--db=postgres","--http-relative-path /auth"]
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
        volumeMounts:
          - name: realm
            mountPath: "/opt/keycloak/data/import"
            readOnly: true
        ports:
        - name: http
          containerPort: 8080
      volumes:
        - name: realm
          emptyDir: {}
        - name: secret-keycloak-realm
          secret:
            secretName: secret-keycloak-realm
