auth/manifests/keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app.kubernetes.io/name: keycloak
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/version: 1.0.0
    app.kubernetes.io/component: auth
    app.kubernetes.io/part-of: nautible
    app.kubernetes.io/managed-by: manual
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: keycloak
    app.kubernetes.io/component: auth
  type: ClusterIP
